force-app/main/default/objects/Master_legal__c/Master_legal__c.object-meta.xml
<CustomObject>
    <label>Master legal</label>
    <nameField>
        <label>Master legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master legals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>