force-app/main/default/objects/Master_legal__c/fields/Case_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Type__c</fullName>
    <label>Case Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request_Up Date Data Email address</fullName>
            </value>
            <value>
                <fullName>Request_Up Date Data Correspondence address</fullName>
            </value>
            <value>
                <fullName>Request_Up Date Data Phone/HP</fullName>
            </value>
            <value>
                <fullName>Request_Up Date Data Correspondence address &amp; Email address</fullName>
            </value>
            <value>
                <fullName>Request_Up Date Data Correspondence address &amp; Phone/HP</fullName>
            </value>
            <value>
                <fullName>Request_Up Date Data Email address &amp; Phone/HP</fullName>
            </value>
            <value>
                <fullName>Request_Up Date Data Correspondence address, Email address &amp; Phone/HP</fullName>
            </value>
            <value>
                <fullName>Request_POS_Lumpsum</fullName>
            </value>
            <value>
                <fullName>Request_POS_Cuti Premi</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Data Pertanggungan</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Alokasi Dana (Redirection)</fullName>
            </value>
            <value>
                <fullName>Request_POS_Frekuensi Pembayaran</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan ID KTP</fullName>
            </value>
            <value>
                <fullName>Request_POS_Perubahan Lainnya</fullName>
            </value>
            <value>
                <fullName>Request_POS_Redemption</fullName>
            </value>
            <value>
                <fullName>Request_POS_Withdrawal</fullName>
            </value>
            <value>
                <fullName>Request_POS_Top Up Berkala (RTU)</fullName>
            </value>
            <value>
                <fullName>Request_POS_Switching &amp; Redirection</fullName>
            </value>
            <value>
                <fullName>REQUEST Cancellation Polis TM_Cooling Off</fullName>
            </value>
            <value>
                <fullName>REQUEST Cancellation Polis TM_Surrender</fullName>
            </value>
            <value>
                <fullName>Request_POS_Pengalihan Dana (Switching)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>