force-app/main/default/objects/Master_legal__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Department</label>
    <referenceTo>Department__c</referenceTo>
    <relationshipLabel>Master legals</relationshipLabel>
    <relationshipName>Master_legals</relationshipName>
    <type>Lookup</type>
</CustomField>