force-app/main/default/objects/Master_legal__c/fields/DepartmentId__c.field-meta.xml
<CustomField>
    <fullName>DepartmentId__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>POS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>