force-app/main/default/objects/Master_legal__c/fields/Jenis_Trx__c.field-meta.xml
<CustomField>
    <fullName>Jenis_Trx__c</fullName>
    <label>Jenis Trx</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Perubahan Data</fullName>
            </value>
            <value>
                <fullName>Simplifikasi</fullName>
            </value>
            <value>
                <fullName>Penutupan Polis TM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>